--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -225,3 +225,15 @@ layout: default
     }
 </style>
 {% endif %}
+
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}, 
+    "HTML-CSS": {
+      availableFonts: ["STIX","TeX"],
+      preferredFont: "STIX",
+      webFont: "STIX-Web"
+    }});
+  </script>
+  <script type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
