--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,7 @@
                         </a>
                     </li>
                     {% endif %}
+
                     {% if site.twitter_username %}
                     <li>
                         <a href="https://twitter.com/{{ site.twitter_username }}">
@@ -70,9 +71,23 @@
                         </a>
                     </li>
                     {% endif %}
-					
-					
                 </ul>
+
+
+                <p class="contact">
+                    联系我：
+                    <a href="mailto:{{site.email}}"><i class="fa fa-envelope-o"></i></a>&nbsp;&nbsp;
+                    <a href="https://github.com/{{site.github_username}}"><i class="fa fa-github"></i></a>&nbsp;&nbsp;
+                    {% if site.weibo_username %}
+                    <a href="https://weibo.com/{{site.weibo_username}}"><i class="fa fa-weibo"></i></a>&nbsp;&nbsp;
+                    {% endif %}
+                  </p>
+                  <p>
+                    本站总访问量<span id="busuanzi_value_site_pv"></span>次，
+                    本站访客数<span id="busuanzi_value_site_uv"></span>人，
+                    本文总阅读量<span id="busuanzi_value_page_pv"></span>次
+                </p>
+
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
