--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -108,15 +108,11 @@ layout: default
 
                         {% if site.sidebar-about-description %}
                             <p>{{site.sidebar-about-description}}</p>
-                            <br>
-
-                            <br>
-                            
                         {% endif %}
 
                         
                         <!-- SNS Link -->
-                        <ul class="list-inline">
+                        <ul class="subheading">
 
                             <li>
                                 邮箱：<a href="mailto:wykxwyc@163.com">wykxwyc@163.com</a> 
