--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -112,8 +112,7 @@ layout: default
 
                         
                         <!-- SNS Link -->
-                        <ul class="subheading">
-
+                        <ul class="visible-md visible-lg">
                             <li>
                                 邮箱：<a href="mailto:wykxwyc@163.com">wykxwyc@163.com</a> 
                             </li>
@@ -149,6 +148,7 @@ layout: default
                                 </a>
                             </li>
                             {% endif %}
+                            
                             {% if site.facebook_username %}
                             <li>
                                 <a target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}">
