--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -110,19 +110,13 @@ layout: default
                             <p>{{site.sidebar-about-description}}</p>
                         {% endif %}
 
-                        
+
                         <!-- SNS Link -->
-                        <ul class="visible-md visible-lg">
-                            <hr>
-                            <h5>
+                        <ul class="list-inline">
                                 邮箱：<a href="mailto:wykxwyc@163.com">wykxwyc@163.com</a> 
-                            <h5>
 
                             {% if site.github_username %}
-                            <hr>
-                            <h5>
                                 Github:<a href="https://github.com/wykxwyc">wykxwyc</a>
-                            </h5>
                             {% endif %}
 
 
