--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -49,6 +49,17 @@ layout: default
                 </section>
                 {% endif %}
 
+                <!-- Contact -->
+                <hr>
+                <h5>CONTACT</h5>
+                <ul class="list-inline">
+                        邮箱：<a href="mailto:wykxwyc@163.com">wykxwyc@163.com</a> 
+
+                        {% if site.github_username %}
+                            Github:<a href="https://github.com/wykxwyc">wykxwyc</a>
+                        {% endif %}
+                </ul>
+
                 <!-- Friends Blog -->
                 {% if site.friends %}
                 <hr>
@@ -113,12 +124,6 @@ layout: default
 
                         <!-- SNS Link -->
                         <ul class="list-inline">
-                                邮箱：<a href="mailto:wykxwyc@163.com">wykxwyc@163.com</a> 
-
-                            {% if site.github_username %}
-                                Github:<a href="https://github.com/wykxwyc">wykxwyc</a>
-                            {% endif %}
-
 
                             {% if site.zhihu_username %}
                             <li>
@@ -158,6 +163,17 @@ layout: default
                     </div>
                 </section>
 
+                
+                <!-- Contact -->
+                <hr>
+                <h5>CONTACT</h5>
+                <ul class="list-inline">
+                        邮箱：<a href="mailto:wykxwyc@163.com">wykxwyc@163.com</a> 
+
+                        {% if site.github_username %}
+                            Github:<a href="https://github.com/wykxwyc">wykxwyc</a>
+                        {% endif %}
+                </ul>
 
                 <!-- Friends Blog -->
                 {% if site.friends %}
