--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -197,3 +197,6 @@
     })();
 </script>
 {% endif %}
+
+<!-- 引入不蒜子统计 -->
+<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
