--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -199,5 +199,4 @@
 {% endif %}
 
 <!-- 引入不蒜子统计 -->
-<script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js">
-</script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
