--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -116,7 +116,9 @@ layout: default
       s.parentNode.insertBefore(o, s);
     }
 </script>
+
 <!-- anchor-js, Doc:http://bryanbraun.github.io/anchorjs/ -->
+<!-- 不安全的脚本问题
 <script>
     async("http://cdn.bootcss.com/anchor-js/1.1.1/anchor.min.js",function(){
         anchors.options = {
@@ -127,6 +129,8 @@ layout: default
         anchors.add().remove('.intro-header h1').remove('.subheading').remove('.sidebar-container h5');
     })
 </script>
+-->
+
 <style>
     /* place left on bigger screen */
     @media all and (min-width: 800px) {
