--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -53,11 +53,12 @@ layout: default
                 <hr>
                 <h5>CONTACT</h5>
                 <ul class="list-inline">
-                        邮箱：<a href="mailto:wykxwyc@163.com">wykxwyc@163.com</a> 
+                        <b>邮箱:</b><a href="mailto:wykxwyc@163.com">wykxwyc@163.com</a> 
 
                         {% if site.github_username %}
-                            Github:<a href="https://github.com/wykxwyc">wykxwyc</a>
+                            <b>Github:</b><a href="https://github.com/wykxwyc">wykxwyc</a>
                         {% endif %}
+                        <b>留言:</b><a href="https://github.com/wykxwyc/wykxwyc.github.io/issues"> Github Issues </a>
                 </ul>
 
                 <!-- Friends Blog -->
@@ -168,11 +169,12 @@ layout: default
                 <hr>
                 <h5>CONTACT</h5>
                 <ul class="list-inline">
-                        邮箱：<a href="mailto:wykxwyc@163.com">wykxwyc@163.com</a> 
+                    <b>邮箱:</b><a href="mailto:wykxwyc@163.com">wykxwyc@163.com</a> 
 
-                        {% if site.github_username %}
-                            Github:<a href="https://github.com/wykxwyc">wykxwyc</a>
-                        {% endif %}
+                    {% if site.github_username %}
+                        <b>Github:</b><a href="https://github.com/wykxwyc">wykxwyc</a>
+                    {% endif %}
+                    <b>留言:</b><a href="https://github.com/wykxwyc/wykxwyc.github.io/issues"> Github Issues </a>
                 </ul>
 
                 <!-- Friends Blog -->
