--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -58,7 +58,7 @@ layout: default
                         {% if site.github_username %}
                             <b>Github:</b><a href="https://github.com/wykxwyc">wykxwyc</a>
                         {% endif %}
-                        <b>留言:</b><a href="https://github.com/wykxwyc/wykxwyc.github.io/issues"> Github Issues </a>
+                        <b>留言</b>请用:<a href="https://github.com/wykxwyc/wykxwyc.github.io/issues"> Github Issues </a>
                 </ul>
 
                 <!-- Friends Blog -->
@@ -174,7 +174,7 @@ layout: default
                     {% if site.github_username %}
                         <b>Github:</b><a href="https://github.com/wykxwyc">wykxwyc</a>
                     {% endif %}
-                    <b>留言:</b><a href="https://github.com/wykxwyc/wykxwyc.github.io/issues"> Github Issues </a>
+                    <b>留言</b>请用:<a href="https://github.com/wykxwyc/wykxwyc.github.io/issues"> Github Issues </a>
                 </ul>
 
                 <!-- Friends Blog -->
