--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -53,9 +53,9 @@ layout: default
                 <hr>
                 <h5>CONTACT</h5>
                 <ul class="list-inline">
-                        <b>留言</b>请用:<a href="https://github.com/wykxwyc/wykxwyc.github.io/issues"> Github Issues </a>
+                        <b>留言</b>请用：<a href="https://github.com/wykxwyc/wykxwyc.github.io/issues"> Github Issues </a>
 
-                        <b>邮箱:</b><a href="mailto:wykxwyc@163.com">wykxwyc@163.com</a> 
+                        <b>邮箱：</b><a href="mailto:wykxwyc@163.com">wykxwyc@163.com</a> 
 
                         {% if site.github_username %}
                             <b>Github:</b><a href="https://github.com/wykxwyc">wykxwyc</a>
@@ -171,9 +171,9 @@ layout: default
                 <hr>
                 <h5>CONTACT</h5>
                 <ul class="list-inline">
-                    <b>留言</b>请用:<a href="https://github.com/wykxwyc/wykxwyc.github.io/issues"> Github Issues </a>
+                    <b>留言</b>请用：<a href="https://github.com/wykxwyc/wykxwyc.github.io/issues"> Github Issues </a>
                     
-                    <b>邮箱:</b><a href="mailto:wykxwyc@163.com">wykxwyc@163.com</a> 
+                    <b>邮箱：</b><a href="mailto:wykxwyc@163.com">wykxwyc@163.com</a> 
 
                     {% if site.github_username %}
                         <b>Github:</b><a href="https://github.com/wykxwyc">wykxwyc</a>
