--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -144,5 +144,14 @@ layout: default
 </style>
 {% endif %}
 
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}, 
+    "HTML-CSS": {
+      availableFonts: ["STIX","TeX"],
+      preferredFont: "STIX",
+      webFont: "STIX-Web"
+    }});
+  </script>
+
 <!--math formula-->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
